[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/inimigos/80s/chao_eletrico/NORMAL.png" type="Texture" id=1]
[ext_resource path="res://sprites/inimigos/80s/chao_eletrico/choque1.png" type="Texture" id=2]
[ext_resource path="res://sprites/inimigos/80s/chao_eletrico/choque3.png" type="Texture" id=3]
[ext_resource path="res://sprites/inimigos/80s/chao_eletrico/choque4.png" type="Texture" id=4]
[ext_resource path="res://sprites/inimigos/80s/chao_eletrico/choque2.png" type="Texture" id=5]
[ext_resource path="res://scripts/inimigos/chao_espinho.gd" type="Script" id=6]
[ext_resource path="res://sprites/inimigos/80s/chao_eletrico/NORMAL_menor.png" type="Texture" id=7]
[ext_resource path="res://sprites/efeitos_jogo/textures/particle_examples/offset_glow.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21.9902, 4.61642 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 22.2074, 3.09645 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 21.8351, 5.6428 )

[node name="chao_espinho" type="StaticBody2D"]
collision_layer = 2
script = ExtResource( 6 )

[node name="spt" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 1 )
frame = 1
playing = true

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="sprite_menor" type="Sprite" parent="."]
visible = false
texture = ExtResource( 7 )

[node name="col" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -1.33786 )
shape = SubResource( 2 )

[node name="tocar_player" type="Area2D" parent="."]

[node name="col" type="CollisionShape2D" parent="tocar_player"]
visible = false
position = Vector2( 0.10511, -3.99426 )
shape = SubResource( 3 )

[node name="atingir_player" type="Area2D" parent="."]

[node name="col" type="CollisionShape2D" parent="atingir_player"]
visible = false
position = Vector2( 0.132431, -0.794598 )
shape = SubResource( 4 )
disabled = true

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 2.26498e-06, -3.17481 )
scale = Vector2( 2.26496, 0.119489 )
texture = ExtResource( 8 )
energy = 2.0

[connection signal="body_entered" from="tocar_player" to="." method="_on_chao_espinho_body_entered"]
[connection signal="body_exited" from="tocar_player" to="." method="_on_chao_espinho_body_exited"]
[connection signal="body_entered" from="atingir_player" to="." method="_on_atingir_player_body_entered"]
